# jisho-scraper

./: Cargo.toml  LICENSE  README.md
src/: jisho.rs  lib.rs  main.rs  sensei_cloze.rs
tests/: cloze_deck.rs  parse_jlpt_n5.rs
tests/fixtures/: jlpt-n5-page1.html
